<resources>
    <string name="app_name">Smarthome</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? <b>Register Now</b></string>
    <string name="email">email</string>
    <string name="email_hint">example@mail.czom</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="register_now">Register Now</string>
    <string name="already_have_an_account_login_now">Already have an account? <b>Login Now</b></string>
    <string name="no_devices_yet">No devices yet</string>
    <string name="txt_no_device_yet">You don\'t have any devices connected yet</string>
    <string name="add_new_device">Add new device</string>
    <string name="voice">voice</string>
    <string name="device">Device</string>
    <string name="name">Name</string>
    <string name="device_type">Device type</string>
    <string name="device_action">Device Action</string>
    <string name="created_by">Created by</string>
    <string name="created_date">Created date</string>
    <string name="modified_by">Modified by</string>
    <string name="modified_date">Modified date</string>
    <string name="turn_on">Turn on</string>
    <string name="turn_off">Turn off</string>
    <string name="start_time">Start time</string>
    <string name="delete">Delete</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="sign_out">Sign out</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="support">Support</string>
    <string name="term_of_use">Term of use</string>
    <string name="account">Account</string>
    <string name="device_1">Device 1</string>
    <string name="add_device">Add Device</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="target">Target</string>
    <string name="notification_setting">Notification setting</string>
    <string name="message_request">Message Request</string>
    <string name="message_response">Message response</string>
    <string name="device_name">Device name</string>
    <string name="action">Action</string>
    <string name="speech_data">Speech data</string>
    <string name="add_speech_data">Add Speech Data</string>
    <string name="value">Value</string>

    <string-array name="deviceActionList">
        <item>ON</item>
        <item>OFF</item>
        <item>NOTHING</item>
    </string-array>

    <string-array name="deviceTypeList">
        <item>CONTROL</item>
        <item>MONITOR</item>
    </string-array>

    <string name="gatt_service_name">BLE Gatt Service</string>
    <string name="gatt_service_description">A background BLE GATT service</string>
    <string name="gatt_service_running_notification">\"Managing BLE GATT service\"</string>
    <string name="pair_the_ble_gatt_server_via_settings">Pair the ble-gatt-server via settings</string>
    <string name="text_state_disconnected">State: Disconnected</string>
    <string name="button_read">Read</string>
    <string name="button_write">Write</string>
    <string name="button_clear_log">Clear</string>
    <string name="text_static_read_hint">Readable characteristic</string>
    <string name="text_static_write_hint">Writeable characteristic</string>
    <string name="text_static_indicate_hint">Indication</string>
    <string name="text_static_autoconnect">Scan &amp; autoconnect</string>
    <string name="text_subscribed">Subscribed</string>
    <string name="text_not_subscribed">Not subscribed</string>
    <string name="text_default_write_value">Android says Hi</string>
    <string name="text_hint_write_value">String value for write</string>
    <string name="text_default_logs_value">Logs:</string>
    <string name="scan">Scan</string>
    <string name="stop">Stop</string>
    <string name="temperature">Temperature</string>
    <string name="place_holder_updated_date">20 April 2012, 20:08 PM</string>
    <string name="device_images">device images</string>
    <string name="unit_measure">Unit measure</string>
    <string name="value_notification_setting">Value</string>
    <string name="device_timer_time">Time</string>
    <string name="choose_date">Choose Date</string>
    <string name="enter_value">Enter value</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_message">Enter message</string>

    <string-array name="filterOptionList">
        <item></item>
        <item>MONITOR</item>
    </string-array>
</resources>